# trade-policy-game

./: .gitignore  README.md  agent_loop.py  api_server.py  production_network_simulation.txt  production_network_simulation0916.tex  project1_layout.txt  requirements.txt  run_experiment.py  run_simulation.py  test.py
analysis/: compare_optimizers.py  debug_constraints.py  debug_supply_demand.py  game.py  optimizers.py  pipeline_demo.py  profile_speed.py  run_game.py
analysis/latex/: bo_response_math.fdb_latexmk  bo_response_math.fls  bo_response_math.tex  (+5 more)
docs/: funding_progress_report.md  param_inventory.md
eco-model-CPP/: CMakeLists.txt  README.md
eco-model-CPP/examples/: CMakeLists.txt  pipeline_demo.cpp
eco-model-CPP/include/eco_model/armington/: ces.hpp  smooth_ops.hpp
eco-model-CPP/include/eco_model/core/: country_params.hpp  math_utils.hpp  model_params.hpp  types.hpp
eco-model-CPP/include/eco_model/equilibrium/: solver.hpp
eco-model-CPP/include/eco_model/production/: cost.hpp  income.hpp  output.hpp
eco-model-CPP/include/eco_model/simulation/: country_sim.hpp  state.hpp  two_country_sim.hpp
eco-model-CPP/src/armington/: ces.cpp  smooth_ops.cpp
eco-model-CPP/src/core/: country_params.cpp  model_params.cpp
eco-model-CPP/src/equilibrium/: solver.cpp
eco-model-CPP/src/production/: cost.cpp  income.cpp  output.cpp
eco-model-CPP/src/simulation/: country_sim.cpp  state.cpp  two_country_sim.cpp
eco-model-CPP/tests/: CMakeLists.txt  test_armington.cpp  test_production.cpp
eco-modelonly/: history_F.csv  history_H.csv
eco_model_v2/: __init__.py  agent_interface.py  armington.py  compat.py  demand.py  dynamics.py  equilibrium.py  equilibrium_rho0.py  factors.py  gradient_agent.py  model_defaults.py  pipeline.py  plotting.py  policy.py  presets.py  production.py  requirements.txt  sandbox.py  simulator.py  supply_chain.py  types.py  utils.py
eco_simu/: __init__.py  model.py  plotting.py  service.py
grad_op/: README.md  requirements.txt
io-final/: INIT_COMPARISON.md  PARAMS_SUMMARY.md  USA2018_5sector_normalized.xlsx  compare_init.py  compute_params.py  load_params.py  test_tau.py  test_tau2.py
io-param/: CHN2017_5sector_CNlike.xlsx  USA2017_5sector_CNlike.xlsx
io_excel/: 2018_US_五部门_仿中表_路径A.xlsx  CHN2017_5sector_USD.xlsx  CHN2017_5sector_normalized.xlsx  CHN2018_5sector_USD.xlsx  CHN2018_5sector_normalized.xlsx  USA2017_5sector_USD.xlsx  USA2017_5sector_normalized.xlsx  USA2018_5sector_USD.xlsx  convert_to_usd.py  normalize_tables.py
io_params-old/: README.md  __init__.py
project_refactor/: README.md
scripts/: convert_5sector_to_oecd.py  etl_oecd_to_params.py  run_agents_10x1000.sh  run_agents_10x1000_new.sh  run_agents_50x1000.sh  run_agents_50x1000_new.sh  run_configured_experiments.py  run_dynamic_search.sh  run_search_1000x100.sh  search_grid_runner.py  test_5sector_dynamics.py  test_search_candidates.py  try.py
usa2017_5sector_cnlike/: 2018_CN_五部门_仿42版式_路径A.xlsx  2018_CN_六部门_非竞争IO_路径A.xlsx  2018_US_五部门(334合并芯片+ICT)_非竞争IO_路径A.xlsx
中美投入产出表数据（附表格阅读说明）/: 投入产出表简要说明.docx
(+394 files in other folders)
